--- a/emacs.org
+++ b/emacs.org
@@ -2043,28 +2043,88 @@ prefix argument."
     :init (progn
             (typo-global-mode 1)
             (add-hook 'text-mode-hook 'typo-mode)
-            (add-hook 'erc-mode-hook 'typo-mode)
+            (add-hook 'circe-chat-mode-hook 'typo-mode)
             (setq typo-language "German")
             (setq-default typo-language "German")))
 #+end_src
-** erc, IRC over Emacs
+** Circe, IRC over Emacs
 
 #+begin_src emacs-lisp
-  (use-package znc
-    :commands znc-all znc-erc
-    :init (progn
-            (load "~/dev/mail/znc.el")
-            (setq erc-startup-file-list '("~/.emacs.d/erc.el"))
+  (load "~/dev/mail/znc.el")
 
-            (defun ck/erc-start-or-switch ()
-              "Connect to ERC, or switch to last active buffer"
-              (interactive)
-              (if (get-buffer "*irc-freenode*") ;; ERC already active?
-                  (ck/erc-track-switch-buffer) ;; yes: switch to last active
-                (when (y-or-n-p "Start ERC?") ;; no: maybe start ERC
-                  (znc-all))))
+  (defun my-irc-login ()
+    "Login into my usual IRCs."
+    (interactive)
+    (circe "EPD-ME")
+    (circe "CCC")
+    (circe "Freenode"))
 
-            (global-set-key (kbd "C-c e") 'ck/erc-start-or-switch)))
+  (defun my-circe-prompt ()
+    (lui-set-prompt
+     (concat (propertize (concat (buffer-name) ">")
+                         'face 'circe-prompt-face)
+             " ")))
+
+  (defun my-circe-set-margin ()
+    (setq
+     fringes-outside-margins t
+     right-margin-width 5
+     word-wrap t
+     wrap-prefix "    "))
+
+  (use-package circe
+    :commands (circe circe-set-display-handler)
+    :init (run-with-idle-timer 5 nil 'my-irc-login)
+    :config (progn
+              (add-hook 'circe-chat-mode-hook 'my-circe-prompt)
+              (add-hook 'lui-mode-hook 'my-circe-set-margin)
+
+              (require 'circe-color-nicks)
+              (require 'circe-chanop)
+              (require 'circe-notifications)
+
+              (enable-circe-color-nicks)
+              (defun lui-irc-propertize (&rest args))
+
+              (defadvice circe-command-SAY (after jjf-circe-unignore-target)
+                (let ((ignored (tracking-ignored-p (current-buffer) nil)))
+                  (when ignored
+                    (setq tracking-ignored-buffers
+                          (remove ignored tracking-ignored-buffers))
+                    (message "This buffer will now be tracked."))))
+              (ad-activate 'circe-command-SAY)
+
+              (setq circe-reduce-lurker-spam t
+                    lui-time-stamp-position 'right-margin
+                    lui-time-stamp-format "%H:%M"
+                    lui-fill-type nil
+                    circe-network-options `(
+                                            ("EPD-ME"
+                                             :nick "Christian"
+                                             :host "jugulator.defunced.de"
+                                             :service 6660
+                                             :tls t
+                                             :channels ("#selfhtml")
+                                             :pass ,epdme-password)
+
+                                            ("CCC"
+                                             :nick "cjk101010"
+                                             :host "jugulator.defunced.de"
+                                             :service 6660
+                                             :tls t
+                                             :channels ("#ccc")
+                                             :pass ,ccc-password)
+
+                                            ("Freenode"
+                                             :nick "cjk101010"
+                                             :host "jugulator.defunced.de"
+                                             :service 6660
+                                             :tls t
+                                             :channels ("#warpzone" "#postgresql" "#rubyonrails" "#erlang" "#emacs" "#ruby" "#cstar")
+                                             :pass ,freenode-password))
+                    tracking-ignored-buffers '("#postgresql" "#rubyonrails" "#erlang" "#emacs" "#ruby"))
+
+              (enable-circe-notifications)))
 #+end_src
 
 ** mu4e
