--- a/emacs.org
+++ b/emacs.org
@@ -149,6 +149,7 @@
 #+begin_src emacs-lisp
 (setq display-time-24hr-format t)
 (setq display-time-day-and-date t)
+(setq display-time-default-load-average nil)
 (display-time)
 #+end_src
 
