--- a/emacs.org
+++ b/emacs.org
@@ -2047,8 +2047,7 @@ prefix argument."
             (typo-global-mode 1)
             (add-hook 'text-mode-hook 'typo-mode)
 
-            (when (not (eq system-type 'darwin))
-              (add-hook 'circe-chat-mode-hook 'typo-mode))
+            (add-hook 'circe-chat-mode-hook 'typo-mode)
 
             (setq typo-language "German")
             (setq-default typo-language "German")))
