--- a/emacs.org
+++ b/emacs.org
@@ -2360,6 +2360,14 @@ When a file isn't writable, re-open it as root.
               (require 'go-autocomplete)))
 #+end_src
 
+
+** elixir-mode
+
+#+begin_src emacs-lisp
+  (use-package elixir-mode
+    :commands elixir-mode)
+#+end_src
+
 ** alchemist
 
 #+begin_src emacs-lisp
